used jlink feature .. reduced docker image size