@@ -6,13 +6,16 @@ COPY pom.xml .
 
 COPY src src
 
-RUN mvn package
+RUN mvn package && \
+    jlink --add-modules com.learn.jlink \
+    --module-path ${JAVA_HOME}/jmods:target/jlink-demo-1.0.0.jar \
+    --output target/jlink-demo-image \
+    --launcher demo=com.learn.jlink/com.learn.jlink.App
 
-FROM openjdk:12-alpine
+FROM alpine:3.8
 
-COPY --from=build /app/target/jlink-demo-1.0.0.jar  /app/target/jlink-demo.jar
+COPY --from=build /app/target/jlink-demo-image /app
 
-ENTRYPOINT ["java","-jar"]
+ENTRYPOINT ["/app/bin/demo"]
 
-CMD ["/app/target/jlink-demo.jar"]
 
